# shared-assets

./: .gitignore  CHANGELOG.md  README.md  README_TEMPLATE.md  body.css  print.css  themes.css
.github/workflows/: test.yml
shared-rust/: Cargo.toml
shared-rust/shared-backend/: Cargo.toml
shared-rust/shared-backend/src/: database.rs  lib.rs
shared-rust/shared-backend/src/auth/: middleware.rs
shared-rust/shared-backend/src/server/: config.rs  helpers.rs  mod.rs
shared-rust/shared-core/: Cargo.toml
shared-rust/shared-core/src/: lib.rs  utils.rs
shared-rust/shared-core/src/i18n/: strings.rs
shared-rust/shared-core/src/i18n/strings/: aria.rs  mod.rs  statuses.rs  tooltips.rs
shared-rust/shared-frontend/: Cargo.toml
shared-rust/shared-frontend/src/: lib.rs  locale.rs  storage.rs  utils.rs
shared-rust/shared-frontend/src/components/: footer.rs  header.rs
shared-rust/shared-frontend/src/components/header/: controls.rs  mod.rs
shared-rust/shared-frontend/src/i18n/common_strings/: mod.rs  outcomes.rs  session_ui.rs  verbs.rs
shared-rust/src/: header.rs  i18n.rs  lib.rs
shared-rust/src/auth/: attempts.rs
shared-rust/src/components/: footer.rs  header.rs
shared-rust/src/server/: config.rs  tests.rs
shared-rust/src/theme/: mod.rs
styles/layout/: header.css
