[package]
name = "shared-core"
description = "Core platform-agnostic types and primitives for studio2201 shared assets."
readme = "../../README.md"
keywords = ["yew", "wasm", "axum", "i18n", "themes"]
categories = ["web-programming", "internationalization", "api-bindings"]
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []
# Reserved for future use; current core is feature-free.

[dependencies]
serde = { workspace = true }
constant_time_eq = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
