[package]
name = "shared-frontend"
description = "Browser and frontend shared assets for studio2201 companion apps."
readme = "../../README.md"
keywords = ["yew", "wasm", "web", "ui", "i18n"]
categories = ["wasm", "gui", "internationalization"]
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["csr"]
# Client-side rendered Yew applications (the only currently supported target).
csr = ["yew/csr"]
# Locale + storage helpers (theme cookie mirror, language cookie).
locale = []
# Toast notifications and `ToastContainer` component.
notifier = []

[dependencies]
shared-core = { path = "../shared-core" }
yew = { workspace = true }
web-sys = { workspace = true }
serde = { workspace = true }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }

[dev-dependencies]
